// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseForm correctly 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value=""
    />
    <ForwardRef(DatePicker)
      inputFormat="dd/MM/yyyy"
      inputProps={
        Object {
          "readOnly": true,
        }
      }
      label="Created At"
      onChange={[Function]}
      renderInput={[Function]}
      showDaysOutsideCurrentMonth={false}
      value={"1969-12-31T19:00:00.000-05:00"}
    />
    <textarea
      onChange={[Function]}
      placeholder="Add a note for your expense (optional)"
      value=""
    />
    <button>
      Add Expense
    </button>
  </form>
</div>
`;

exports[`should render ExpenseForm with expense data 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value="Rent"
    />
    <input
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value="1095"
    />
    <ForwardRef(DatePicker)
      inputFormat="dd/MM/yyyy"
      inputProps={
        Object {
          "readOnly": true,
        }
      }
      label="Created At"
      onChange={[Function]}
      renderInput={[Function]}
      showDaysOutsideCurrentMonth={false}
      value={"1969-12-27T19:00:00.000-05:00"}
    />
    <textarea
      onChange={[Function]}
      placeholder="Add a note for your expense (optional)"
      value=""
    />
    <button>
      Add Expense
    </button>
  </form>
</div>
`;

exports[`should render error for invalid form submission 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value=""
    />
    <ForwardRef(DatePicker)
      inputFormat="dd/MM/yyyy"
      inputProps={
        Object {
          "readOnly": true,
        }
      }
      label="Created At"
      onChange={[Function]}
      renderInput={[Function]}
      showDaysOutsideCurrentMonth={false}
      value={"1969-12-31T19:00:00.000-05:00"}
    />
    <textarea
      onChange={[Function]}
      placeholder="Add a note for your expense (optional)"
      value=""
    />
    <button>
      Add Expense
    </button>
  </form>
</div>
`;

exports[`should render error for invalid form submission 2`] = `
<div>
  <p>
    Please provide description and amount.
  </p>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value=""
    />
    <ForwardRef(DatePicker)
      inputFormat="dd/MM/yyyy"
      inputProps={
        Object {
          "readOnly": true,
        }
      }
      label="Created At"
      onChange={[Function]}
      renderInput={[Function]}
      showDaysOutsideCurrentMonth={false}
      value={"1969-12-31T19:00:00.000-05:00"}
    />
    <textarea
      onChange={[Function]}
      placeholder="Add a note for your expense (optional)"
      value=""
    />
    <button>
      Add Expense
    </button>
  </form>
</div>
`;
